--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div>
-                <h3 id="h31">HOME</h3>
+                <h3 id="h31">HOME1</h3>
                 <h4 id="homescore">0</h4>
                     <div class="homebtns">
                         <button id="home+1" onclick="fcnH1()">+1</button>
